--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #0B2434;
+  font-family: 'Karla', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+main {
+  background-color: #F5F5F5;
+  margin: 32px 24px;
+  height: calc(100vh - 60px);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dice {
+  display: grid;
+  grid-template: auto auto/ repeat(5, 1fr);
+  gap: 16px;
+  width: 400px;
+  margin-top: 36px;
+}
+
+.die-face {
+  height: 60px;
+  width: 60px;
+  border-radius: 4px;
+  background-color: white;
+  box-shadow: 0px 2px 5px 2px rgba(90,90,90,0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 32px;
+  font-weight: 700;
+  cursor: pointer;
 }
