--- a/src/index.css
+++ b/src/index.css
@@ -17,24 +17,56 @@ main {
   align-items: center;
 }
 
+.title {
+  margin: 60px 0 0 0;
+}
+
+.instructions {
+  width: 400px;
+  text-align: center;
+  line-height: 24px;
+}
+
 .dice {
   display: grid;
   grid-template: auto auto/ repeat(5, 1fr);
   gap: 16px;
   width: 400px;
-  margin-top: 36px;
+  margin-top: 32px;
 }
 
 .die-face {
   height: 60px;
   width: 60px;
-  border-radius: 4px;
-  background-color: white;
+  border-radius: 8px;
   box-shadow: 0px 2px 5px 2px rgba(90,90,90,0.2);
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 32px;
+  font-size: 24px;
   font-weight: 700;
   cursor: pointer;
+}
+
+.btn-roll {
+  background-color: #5035FF;
+  color: white;
+  padding: 8px 36px;
+  border: 0;
+  font-family: inherit;
+  border-radius: 4px;
+  font-size: 20px;
+  margin-top: 32px;
+  box-shadow: 0px 2px 10px 2px rgba(130,130,130,0.3);
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+.btn-roll:hover {
+  background-color: #3f27e0;
+}
+
+.btn-roll:active {
+  background-color: #3f27e0;
+  box-shadow: 0px 2px 10px 2px rgba(130,130,130,0.3), inset 3px 3px 5px 3px rgba(30,30,30,0.3);;
 }
