--- a/src/index.css
+++ b/src/index.css
@@ -2,19 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 body {
-  margin: 0;
   background-color: #0B2434;
   font-family: 'Karla', sans-serif;
+  margin: 0;
 }
 
 main {
   background-color: #F5F5F5;
-  margin: 32px 24px;
-  height: calc(100vh - 60px);
-  border-radius: 8px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 32px 24px;
+  border-radius: 8px;
 }
 
 .title {
@@ -27,36 +26,40 @@ main {
   line-height: 24px;
 }
 
+.rolls {
+  margin: 0;
+}
+
 .dice {
   display: grid;
   grid-template: auto auto/ repeat(5, 1fr);
-  gap: 16px;
   width: 400px;
+  gap: 16px;
   margin-top: 32px;
 }
 
 .die-face {
-  height: 60px;
-  width: 60px;
-  border-radius: 8px;
-  box-shadow: 0px 2px 5px 2px rgba(90,90,90,0.2);
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 60px;
+  width: 60px;
   font-size: 24px;
   font-weight: 700;
+  border-radius: 8px;
+  box-shadow: 0px 2px 5px 2px rgba(90,90,90,0.2);
   cursor: pointer;
 }
 
 .btn-roll {
   background-color: #5035FF;
   color: white;
-  padding: 8px 36px;
-  border: 0;
   font-family: inherit;
-  border-radius: 4px;
   font-size: 20px;
-  margin-top: 32px;
+  border: 0;
+  border-radius: 4px;
+  padding: 8px 36px;
+  margin: 32px 0 60px 0;
   box-shadow: 0px 2px 10px 2px rgba(130,130,130,0.3);
   cursor: pointer;
   transition: 0.4s;
@@ -69,4 +72,25 @@ main {
 .btn-roll:active {
   background-color: #3f27e0;
   box-shadow: 0px 2px 10px 2px rgba(130,130,130,0.3), inset 3px 3px 5px 3px rgba(30,30,30,0.3);;
+}
+
+@media only screen and (max-width: 450px) {
+  .instructions {
+    width: 300px;
+  }
+
+  .dice {
+    grid-template: auto auto/ repeat(5, 1fr);
+    gap: 16px;
+    width: 300px;
+  }
+
+  .die-face {
+    height: 45px;
+    width: 45px;
+    font-size: 18px;
+    font-weight: 700;
+    box-shadow: 0px 2px 5px 2px rgba(90,90,90,0.2);
+    cursor: pointer;
+  }
 }
